tests/ui/feature-gates/unknown-feature.rs
#![feature(unknown_rust_feature)] //~ ERROR unknown feature

fn main() {}
